bathos_unix_defconfig.conf: default empty BATHOS_PATH var; ask user to define it
Signed-off-by: Aurelio Colosimo <aurelio@aureliocolosimo.it>

--- a/bathos_unix_defconfig.conf
+++ b/bathos_unix_defconfig.conf
@@ -1,4 +1,11 @@
-BATHOS_PATH ?= /home/develop/yun/riordino-git/bathos-mcuio
+# Set BATHOS_PATH variable point to bathos_mcuio in your filesystem
+#
+#BATHOS_PATH ?= /path/to/bathos-mcuio
+
+ifndef BATHOS_PATH
+  $(error Please define BATHOS_PATH variable at cmd line or in bathos_unix_defconfig.conf)
+endif
+
 ALLOCATOR_OBJ ?= $(BATHOS_PATH)/lib/allocator.o \
                  $(BATHOS_PATH)/lib/allocator-tables.o
 
